git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@7769 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/module/module.edit.html
+++ b/App/View/module/module.edit.html
@@ -10,12 +10,22 @@
         });
 		
 </script>
+<style>
+.img-flip {
+        position:absolute;
+        width:16px;
+        height:16px;
+        -webkit-transform:rotate(180deg);
+        -moz-transform:rotate(180deg);
+        -ms-transform:rotate(180deg);
+        transform:rotate(180deg);
+    }
+</style>
 <div class="wrap">
 <input type="hidden" name="moduleId" id="moduleId" value="<?=$module['id']?>">
     <div class="wrap-top">
         <h4>首页模块设置 》 编辑</h4><span></span>
     </div>
-	<p class="text-left" style="margin-top:20px;padding:0 5px 0 5px;background-color:#FFFF99;border:1px solid #dadada;">您可以在此管理首页推荐的商品模块，并为每个模块添加分类和商品。建议每个模块至少有两个分类。</p>
 	<div class="mj-ztBar f-clearfix">
         <span class="mj-ztBr">
             <a class="btn btn-info" href="<?=$referr?>">返回</a>
@@ -23,9 +33,21 @@
 		<div>
 			<ul>
 				<li>
+					<label>模块状态：</label>
+					<select name="isUse" id="isUse" >
+						<option value="1" <?if($module['isUse'] == 1){ echo "selected";} ?>> 显示</option>
+						<option value="2" <?if($module['isUse'] == 2){ echo "selected";} ?>> 不显示</option>
+					</select>
+				</li>
+				<li>
+				<p style="margin:20px 0;padding:0 5px 0 5px;background-color:#FFFF99;border:1px solid #dadada;width:700px;">您可以在此管理首页推荐的商品模块，并为每个模块添加分类和商品。建议每个模块至少有两个分类。</p>
+				</li>
+				<li>
 					<label>模块标题：</label>
-					<input type="text" name="name" id="modeluname" value="<?=$module['name']?>" />
-					<a href="javascript:void(0);"  class="btn btn-default" >确定</a>
+					<input type="text" name="name" id="modulename" value="<?=$module['name']?>" maxlength="8" />
+					<a href="javascript:void(0);"  class="btn btn-default" onclick="setModule(<?=$module['id']?>)" >确定</a>
+					<p style="margin:20px 0;padding:0 5px 0 5px;background-color:#FFFF99;border:1px solid #dadada;width:260px;">模块标题最多不可超过8个中文字符。</p>
+				
 				</li>
 			</ul>
 		<div>
@@ -42,16 +64,12 @@
 				<?foreach ($moduleClass['rows'] as $ky => $vl) { ?>
 				<tr>
 					<td><?=$vl['name']?></td>
-					<td><?=$vl['saleNum']?></td>
+					<td><?=$vl['itemNum']?></td>
 					<td>
-					<?if ( $vl['isVerify'] == 1) {?>
-						<a href="javascript:void(0);" onclick="delContact(<?=$sale['id']?>, <?=$vl['id']?>, <?=count($sale['contact'])?>);">删除</a>
-						<a href="javascript:void(0);" onclick="setContact(<?=$sale['id']?>, <?=$vl['id']?>);">编辑</a>
-						<!-- <a href="">生成报价</a> -->
-					<?}else{?>
-						<a href="javascript:void(0);" onclick="setVerify(<?=$sale['id']?>, <?=$vl['id']?>);">通过</a>
-						<a href="javascript:void(0);" onclick="delVerify(<?=$sale['id']?>, <?=$vl['id']?>, <?=count($sale['contact'])?>);">驳回</a>
-					<?}?>
+						<a href="javascript:void(0);" onclick="delClass(<?=$module['id']?>,<?=$vl['id']?>);">删除</a>
+						<a href="javascript:void(0);" onclick="setClass(<?=$module['id']?>,<?=$vl['id']?>);">编辑</a>	&nbsp;&nbsp;|&nbsp;&nbsp;
+						<span onclick="orderBasic(<?=$v['id']?>, 1, 3)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>&nbsp;&nbsp;
+						<span class="img-flip" onclick="orderBasic(<?=$v['id']?>, 2, 3)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>	
 					</td>
 				</tr>
 				<?}?>
@@ -60,7 +78,7 @@
 		</div>
 		<div class="mj-deiBlist">
 			<div class="mj-deiBtns">
-				<a href="javascript:void(0);" id="mj-deib">新增分类</a>
+				<a href="javascript:void(0);" id="addclass">新增分类</a>
 			</div>
 		</div>
     
@@ -80,9 +98,9 @@
 					<td><?=$vl['link']?></td>
 					<td>
 						<a href="javascript:void(0);" onclick="delPic(<?=$module['id']?>, <?=$vl['id']?>)">删除</a>
-						<a href="javascript:void(0);" onclick="setPic(<?=$module['id']?>, <?=$vl['id']?>);">编辑</a> |
-						<a href="javascript:void(0);" onclick="setVerify(<?=$sale['id']?>, <?=$vl['id']?>);">向下</a>
-						<a href="javascript:void(0);" onclick="delVerify(<?=$sale['id']?>, <?=$vl['id']?>, <?=count($sale['contact'])?>);">向上</a>
+						<a href="javascript:void(0);" onclick="setPic(<?=$module['id']?>, <?=$vl['id']?>);">编辑</a>	&nbsp;&nbsp;|&nbsp;&nbsp;
+						<span onclick="orderBasic(<?=$v['id']?>, 1, 3)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>&nbsp;&nbsp;
+						<span class="img-flip" onclick="orderBasic(<?=$v['id']?>, 2, 3)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>
 					</td>
 				</tr>
 				<?}?>
@@ -113,9 +131,9 @@
 					<td><?if($vl['show'] == 0){echo "普通";}elseif($vl['show'] == 1){echo "红";}elseif($vl['show'] == 2){echo "蓝";}elseif($vl['show'] == 3){echo "黄";}?></td>
 					<td>
 						<a href="javascript:void(0);" onclick="delLink(<?=$module['id']?>, <?=$vl['id']?>);">删除</a>
-						<a href="javascript:void(0);" onclick="setLink(<?=$module['id']?>, <?=$vl['id']?>);">编辑</a> |
-						<a href="javascript:void(0);" onclick="setVerify(<?=$sale['id']?>, <?=$vl['id']?>);">向下</a>
-						<a href="javascript:void(0);" onclick="delVerify(<?=$sale['id']?>, <?=$vl['id']?>, <?=count($sale['contact'])?>);">向上</a>
+						<a href="javascript:void(0);" onclick="setLink(<?=$module['id']?>, <?=$vl['id']?>);">编辑</a>	&nbsp;&nbsp;|&nbsp;&nbsp;
+						<span onclick="orderBasic(<?=$v['id']?>, 1, 3)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>&nbsp;&nbsp;
+						<span class="img-flip" onclick="orderBasic(<?=$v['id']?>, 2, 3)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>
 					</td>
 				</tr>
 				<?}?>
@@ -139,16 +157,16 @@
 		/**新增推广链接**/
 		$('#addlink').click(function(){
 			setLink(moduleId,0);
-		})	
-    })
-	
-	
-	$(function(){
-		var moduleId = $('#moduleId').val();
+		})
 		/**新增广告图**/
 		$('#addpic').click(function(){
 			setPic(moduleId,0);
-		})	
+		})			
+		
+		/**新增分类**/
+		$('#addclass').click(function(){
+			setClass(moduleId,0);
+		})
     })
 
 </script>
