--- a/App/View/channel/channel.top.html
+++ b/App/View/channel/channel.top.html
@@ -11,38 +11,45 @@
 
 <!--出售信息弹层-->
 <div class="mj-infoM" style="width:99%">
-<form name="setWord" id="setWord" >
-    <input type="hidden" name="id" value="<?=$id?>" />
-    
-    <label>热门交易标题：</label>
-    <input type="input" class="form-control" maxlength="8"  name="title" value="<?=$info['desc']?>">
-    
-    <div class="alert alert-warning"style="padding:2px;margin-bottom:10px;margin-top:10px;" role="alert">
-    请输入交易标题，最多不可超过8个中文字符。
-    </div>
-    <label>图片链接：</label>
-    <input type="input" class="form-control" name="link" value="<?=$info['link']?>">
+<form name="setTop" id="setTop" >
+    <input type="hidden" name="cId" value="<?=$cId?>" />
 
+    <label>商标号：</label>
+    <textarea style="width:500px;height:200px;" name="number"></textarea>
+    
     <div class="alert alert-warning" style="padding:2px;margin-bottom:10px;margin-top:10px;" role="alert">
-    请输入该广告链接，未输入链接则该图片不可点击。
+    商标号可同时创建多个，例如：144,88888,888888
     </div>
-    <label>是否着重展示:</label>
-    <select name="model">
-    <? foreach ($INDEX_WORD_STRESS as $k => $v) { ?>
-        <option value="<?=$k?>" <? if($info['other']==$k){echo 'selected';}?> ><?=$v?></option>
-    <? } ?>
-    </select>
     <div style="bottom:10px;position: fixed;">
         <a href="javascript:void(0);" class="mj-liBtns" onclick="opContact();">确定</a>
         <a href="javascript:void(0);" class="mj-liBtns mj-abgcg" onclick="closeAll();">取消</a>
     </div>
-    
+        
 </form>
 </div>
 
 <script type="text/javascript">
     $(function(){
         $(".mj-infoM").show();
+
+        $(".bzform").wrap("<form id='bzformupload' action='/basic/ajaxUploadPic/' method='post' enctype='multipart/form-data'></form>");
+        $("#bzfile").on('change', function(){
+            $("#bzformupload").ajaxSubmit({
+                dataType:  'json',
+                success: function(data) {
+                    if (data.code == 1){
+                        $('.bzpic').val(data.img);
+                        $('#bzpic').attr('src', data.img);
+                        //$('#imageurl').css('visibility', 'visible');
+                    }else{
+                        alert(data.msg);
+                    }
+                },
+                error:function(xhr){
+                    alert('图片格式不正确或图片过大，请重新上传！');
+                }
+            });
+        });
     });
 
     function closeAll()
@@ -51,10 +58,10 @@
     }
     function opContact()
     {
-        var data = $("#setWord").serialize();
+        var data = $("#setTop").serialize();
         $.ajax({
             type : 'post',
-            url  : '/basic/setWord/',
+            url  : '/channel/setTop/',
             data : data,
             dataType : 'json',
             success : function (data){
@@ -66,7 +73,7 @@
                     });
                 }else{
                     layer.msg(data.msg, {
-                        time: 1000 //2秒关闭（如果不配置，默认是3秒）
+                        time: 3000 //2秒关闭（如果不配置，默认是3秒）
                     });
                 }
             },
