git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@7796 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/module/module.classes.html
+++ b/App/View/module/module.classes.html
@@ -59,7 +59,7 @@
 	<br>
 	<a href="javascript:void(0)" class="nexta" id="addclassitem">+ 新增商品</a>
 	<br>
-	<div class="thistip" ><em  class="cFF6701" >每条分类最多可添加8条展示商品</em><div>
+	<div class="thistip" ><em  class="cFF6701" >每条分类最多可添加8条展示商品</em></div>
 	<br>
 	<a href="javascript:void(0)" class="nexta" id="adddata">确定创建</a><a href="javascript:void(0)" class="cancela">取消</a>
 	</form>
