--- a/App/View/channel/channel.banner.html
+++ b/App/View/channel/channel.banner.html
@@ -15,7 +15,7 @@
     <input type="hidden" name="id" value="<?=$info['id']?>" />
     <input type="hidden" name="banner" class="bzpic" value="<?=$info['banner']?>" />
     <div class="bzform">
-        <img id="bzpic" src="<?=$info['banner']?>" onerror="this.src='/Static/1.2/images/u279.png'" class="info-pic" >
+        <img id="bzpic" src="<?=$info['banner']?>" onerror="this.src='/Static/1.2/images/ztbanner.png'" class="info-pic" >
         <input type="hidden" name="size" value="200" style="display: none;"/>
         <input type="file" id="bzfile" name="fileName" style="display: inline-block;"/>
     </div>
