--- a/App/View/channel/channel.index.html
+++ b/App/View/channel/channel.index.html
@@ -65,7 +65,7 @@
         <span></span>
     </div>
     <div>
-        <img id="bzpic" class="banner-show" src="<?=$info['banner']?>" onerror="this.src='/Static/1.2/images/u279.png'" />
+        <img id="bzpic" class="banner-show" src="<?=$info['banner']?>" onerror="this.src='/Static/1.2/images/ztbanner.png'" />
         <div class="alert alert-warning margin-sx-10" style="padding:2px;" role="alert">
             广告图片建议尺寸为 ( 1920 ) x ( 864 )，文件最大不超过200kb，当前支持jpg,bmp,png格式文件
         </div>
