--- a/App/View/topic/topic.edit.html
+++ b/App/View/topic/topic.edit.html
@@ -57,7 +57,8 @@
 				<li><br><hr><br></li>
 				<li>
 					<label>背景设置：</label>
-					<input type="text" name="bgColor" id="bgColor" value="<?=$module['name']?>" maxlength="8" /><a href="javascript:void(0);"  class="btn btn-default" id="cp5" >选色</a>
+					<input type="text" name="bgColor" id="bgColor" value="<?=$module['name']?>" maxlength="8" />
+					<a href="javascript:void(0);"  class="btn btn-default" id="cp5" >选色</a>
 					<p style="margin:20px 0;padding:0 5px 0 5px;">请输入色码或选择颜色</p>
 				</li>
 				<li><br><hr><br></li>
